<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/colorRed"
            android:orientation="vertical">

            <TextView
                android:id="@+id/team_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="@dimen/layout_sixteen"
                android:textSize="14sp"
                android:textColor="@color/colorWhite"
                android:color="#616161"
                android:fontFamily="sans-serif-medium"
                android:text="@string/pc_nerd" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_sixteen"
                android:gravity="center_horizontal"
                android:textSize="56sp"
                android:textColor="@color/colorWhite"
                android:text="@string/zero" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorWhite"
                android:orientation="vertical">

                <Button
                    android:id="@+id/hit_cup_a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_twenty_four"
                    android:layout_marginLeft="@dimen/layout_sixteen"
                    android:layout_marginRight="@dimen/layout_sixteen"
                    android:background="@drawable/my_button_bg"
                    android:textColor="@color/colorRed"
                    android:drawableBottom="@drawable/beer_pong_cup32"
                    android:onClick="addOneForTeamA"
                    android:text="@string/hit_cup" />

                <Button
                    android:id="@+id/bounce_a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_eight"
                    android:layout_marginLeft="@dimen/layout_sixteen"
                    android:layout_marginRight="@dimen/layout_sixteen"
                    android:drawableBottom="@drawable/beer_pong_cup64"
                    android:background="@drawable/my_button_bg"
                    android:textColor="@color/colorRed"
                    android:onClick="addTwoForTeamA"
                    android:text="@string/bounce" />

                <Button
                    android:id="@+id/death_cup_a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_eight"
                    android:layout_marginLeft="@dimen/layout_sixteen"
                    android:layout_marginRight="@dimen/layout_sixteen"
                    android:drawableBottom="@drawable/beer_pong_cup_96"
                    android:background="@drawable/my_button_bg"
                    android:textColor="@color/colorRed"
                    android:onClick="addThreeForTeamA"
                    android:text="@string/death_cup" />
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="@dimen/layout_one"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/layout_zero"
            android:background="@color/colorAccent"
            android:orientation="vertical" />

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="@dimen/layout_zero"
            android:background="@color/colorRed"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/team_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="@dimen/layout_sixteen"
                android:textSize="14sp"
                android:textColor="@color/colorWhite"
                android:fontFamily="sans-serif-medium"
                android:text="@string/frat_bros" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_sixteen"
                android:gravity="center_horizontal"
                android:textSize="56sp"
                android:textColor="@color/colorWhite"
                android:text="@string/zero" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorWhite"
                android:orientation="vertical">
                <Button
                    android:id="@+id/hit_cup_b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_twenty_four"
                    android:layout_marginLeft="@dimen/layout_sixteen"
                    android:layout_marginRight="@dimen/layout_sixteen"
                    android:background="@drawable/my_button_bg"
                    android:textColor="@color/colorRed"
                    android:drawableBottom="@drawable/beer_pong_cup32"
                    android:onClick="addOneForTeamB"
                    android:text="@string/hit_cup" />

                <Button
                    android:id="@+id/bounce_b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_eight"
                    android:layout_marginLeft="@dimen/layout_sixteen"
                    android:layout_marginRight="@dimen/layout_sixteen"
                    android:drawableBottom="@drawable/beer_pong_cup64"
                    android:background="@drawable/my_button_bg"
                    android:textColor="@color/colorRed"
                    android:onClick="addTwoForTeamB"
                    android:text="@string/bounce" />

                <Button
                    android:id="@+id/death_cup_b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_eight"
                    android:layout_marginLeft="@dimen/layout_sixteen"
                    android:layout_marginRight="@dimen/layout_sixteen"
                    android:drawableBottom="@drawable/beer_pong_cup_96"
                    android:background="@drawable/my_button_bg"
                    android:textColor="@color/colorRed"
                    android:onClick="addThreeForTeamB"
                    android:text="@string/death_cup" />
            </LinearLayout>

        </LinearLayout>
        </LinearLayout>

    <Button
        android:id="@+id/new_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/layout_eight"
        android:layout_marginRight="@dimen/layout_eight"
        android:layout_marginBottom="@dimen/layout_sixteen"
        android:background="@color/colorRed"
        android:textColor="@color/colorWhite"
        android:onClick="newGame"
        android:text="@string/new_game" />

</RelativeLayout>

</ScrollView>



